--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-  "name": "rkyexpressapp",
-  "version": "0.0.0",
-  "private": true,
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js"
   },
+  "author": "Kajol",
+  "license": "MIT",
+  "description": "",
   "dependencies": {
+    "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "^1.4.7",
     "crypto": "^1.0.1",
-    "debug": "~2.6.9",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.4.5",
     "email-validator": "^2.0.4",
-    "express": "~4.16.1",
+    "express": "^4.21.1",
     "express-handlebars": "^8.0.1",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.12.0",
-    "morgan": "~1.9.1",
+    "mongodb": "^6.11.0",
     "uuid": "^11.0.3"
   }
 }
