--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "node app.js"
   },
+  "engines": {
+  "node": "20.0"
+},
   "author": "Kajol",
   "license": "MIT",
   "description": "",
