--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "node app.js"
   },
   "engines": {
-  "node": "20.0"
-},
+    "node": "20.0"
+  },
   "author": "Kajol",
   "license": "MIT",
   "description": "",
@@ -20,6 +20,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.21.1",
     "express-handlebars": "^8.0.1",
+    "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.11.0",
     "uuid": "^11.0.3"
