--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.11.0",
+    "nodemailer": "^6.9.16",
     "path": "^0.12.7",
     "uuid": "^11.0.3"
   }
