--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.9",
+    "backend": "file:",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "crypto": "^1.0.1",
