--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "express": "^4.21.1",
     "express-handlebars": "^8.0.1",
     "handlebars": "^4.7.8",
+    "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.11.0",
     "nodemailer": "^6.9.16",
     "path": "^0.12.7",
+    "sanitize-html": "^2.14.0",
     "uuid": "^11.0.3"
   }
 }
