--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemailer": "^6.9.16",
     "path": "^0.12.7",
     "sanitize-html": "^2.14.0",
+    "sweetalert2": "^11.15.10",
     "uuid": "^11.0.3"
   }
 }
