--- a/config/settings.json
+++ b/config/settings.json
@@ -1,7 +1,7 @@
 {
     "mongoConfig": {
       
-      "serverUrl": "mongodb+srv://xstream-user:AMpuFLlsLfzz0SEc@xstream.36ipo.mongodb.net/?retryWrites=true&w=majority&appName=Xstream",
+      "serverUrl": "mongodb+srv://xstream-user:AMpuFLlsLfzz0SEc@xstream.lalum.mongodb.net/?retryWrites=true&w=majority&appName=Xstream",
     "database": "Xstream"
     }
   }
