--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.11.0",
+    "node": "^22.0.0",
     "nodemailer": "^6.9.16",
     "path": "^0.12.7",
     "sanitize-html": "^2.14.0",
